# streaming-metrics

./: .gitignore  Cargo.toml  README.md  compose.yaml  gradle.properties  rustfmt.toml  settings.gradle
.zed/: debug.json  settings.json
conf/grafana/: dashboard.json
conf/mongodb/: init.js
conf/prometheus/: dev.prometheus-source.yml  local.prometheus-source.yml  prometheus-sink.yml  prometheus-source.yml
container/: adapter.Dockerfile  source.Dockerfile
docs/drawio/: architecture.drawio
java/process/: build.gradle
java/process/src/main/java/org/example/: App.java  Main.java
java/process/src/main/java/org/example/conf/: Environment.java  GestaltCache.java  KafkaSource.java  Mongo.java  Server.java
java/process/src/main/java/org/example/operators/: MetadataEnrichment.java  Utils.java  ViewDuplication.java
java/process/src/main/java/org/example/sinks/: ViewDuplicatedMetrics.java
java/process/src/main/java/org/example/sources/: RawMetrics.java
java/process/src/main/resources/: application.properties  dev.application.properties  log4j2.properties
java/process/src/test/java/org/example/: AppTest.java  MainTest.java
rust/adapter/: Cargo.toml  build.rs
rust/adapter/src/: lib.rs  main.rs  message_broker.rs
rust/adapter/src/message_broker/: kafka.rs
rust/source/: Cargo.toml
rust/source/src/: axum_demo.rs  lib.rs  main.rs  server.rs
