[workspace]
resolver = "3"
members = ["rust/adapter","rust/source"]

[workspace.dependencies]
axum = "0.8.8"
prometheus-client = "0.24.0"
rand = "0.9.2"
tokio = "1.48.0"
tower = "0.5.2"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.19.0"
async-trait = "0.1.89"
futures = "0.3.31"
prost = "0.14.1"
rdkafka = "0.38.0"
snap = "1.1.1"
prost-build = "0.14.1"
