[package]
name = "adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
prost = "0.14.1"
snap = "1.1.1"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.14.1"
