[package]
name = "adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
axum.workspace = true
futures.workspace = true
prost.workspace = true
rdkafka = { workspace = true, features = ["cmake-build"] }
snap.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
prost-build.workspace = true
