[package]
name = "source"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
prometheus-client = "0.24.0"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
