[package]
name = "source"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
prometheus-client.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
